--- a/src/style.css
+++ b/src/style.css
@@ -95,3 +95,24 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+#the_list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+  gap: 2rem;
+
+  .task-name {
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+  }
+  .task-description {
+    font-weight: 400;
+    letter-spacing: normal;
+    text-transform: none;
+  }
+}
