--- a/src/style.css
+++ b/src/style.css
@@ -25,43 +25,34 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
 }
 
 h1 {
+  text-align: center;
   font-size: 3.2em;
   line-height: 1.1;
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-skip-ink: none;
+  text-decoration-thickness: 15%;
+  text-decoration-color: bisque;
+}
+
+h2 {
+  text-align: center;
+  font-size: 2.2rem;
+  width: 100%;
 }
 
 #app {
-  max-width: 1280px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 2rem;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
 
 button {
@@ -83,6 +74,61 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+section {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+
+  ul {
+    list-style-type: none;
+  }
+}
+
+input:checked {
+  accent-color: rgb(174, 140, 100);
+}
+
+.task-name,
+.finished-tasks {
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.task-description,
+.task-deadline {
+  font-weight: 400;
+  letter-spacing: normal;
+  text-transform: none;
+}
+
+.finished-tasks {
+  color: darkgray;
+}
+
+@media screen and (min-width: 480px) {
+  #app {
+    flex-direction: row;
+    justify-content: space-evenly;
+    max-width: 100%;
+    padding: 2rem;
+    text-align: left;
+
+    section {
+      display: flex;
+      gap: 2rem;
+      width: calc(25%);
+
+      li {
+        margin-bottom: 2rem;
+      }
+    }
+  }
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -93,28 +139,5 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
-  }
-}
-
-#the_list {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  text-align: left;
-  margin: 0;
-  padding: 0;
-  gap: 2rem;
-
-  .task-name {
-    font-weight: bold;
-    letter-spacing: 0.1rem;
-    text-transform: uppercase;
-    cursor: pointer;
-  }
-  .task-description,
-  .task-deadline {
-    font-weight: 400;
-    letter-spacing: normal;
-    text-transform: none;
   }
 }
