--- a/src/style.css
+++ b/src/style.css
@@ -2,25 +2,14 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: rgba(255, 255, 255, 0.87);
+  color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -42,6 +31,10 @@ h1 {
 h2 {
   text-align: center;
   font-size: 2.2rem;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  text-decoration-thickness: 35%;
+  text-decoration-color: bisque;
   width: 95%;
 }
 
@@ -63,13 +56,13 @@ button {
   font-weight: 500;
   align-self: center;
   font-family: inherit;
-  background-color: #1a1a1a;
+  color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
   width: fit-content;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: rgb(174, 140, 100);
 }
 button:focus,
 button:focus-visible {
@@ -81,6 +74,7 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: rgba(255, 255, 255, 0.6);
   margin: 0;
   padding: 0;
   text-align: left;
@@ -93,7 +87,7 @@ section {
     margin-top: 1.5rem;
   }
   input {
-    width: 30%;
+    width: 20%;
   }
 }
 
@@ -144,18 +138,5 @@ input:checked {
         margin-bottom: 2rem;
       }
     }
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
