--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,9 @@
 body {
   margin: 0;
   padding: 0;
+  background-image: url(the_scream_small.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 
 h1 {
@@ -54,6 +57,7 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
+  margin: 0.5rem;
   align-self: center;
   font-family: inherit;
   color: #1a1a1a;
@@ -74,7 +78,6 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgba(255, 255, 255, 0.6);
   margin: 0;
   padding: 0;
   text-align: left;
@@ -133,6 +136,7 @@ input:checked {
       justify-content: center;
       gap: 2rem;
       width: calc(30%);
+      background-color: rgba(255, 255, 255, 0.6);
 
       li {
         margin-bottom: 2rem;
