--- a/src/style.css
+++ b/src/style.css
@@ -53,12 +53,11 @@ h2 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  margin: 0.5rem;
-  align-self: center;
+  margin-bottom: 1.5rem;
   font-family: inherit;
   color: #1a1a1a;
   cursor: pointer;
@@ -82,15 +81,28 @@ section {
   padding: 0;
   text-align: left;
 
+  p {
+    margin-bottom: 0;
+  }
+
   ul {
     list-style-type: none;
+
+    li {
+      margin-top: 1.5rem;
+    }
   }
 
   label {
     margin-top: 1.5rem;
   }
-  input {
+  .text-input {
     width: 20%;
+    margin-bottom: 1rem;
+  }
+
+  .check-input {
+    margin-left: 2rem;
   }
 }
 
@@ -128,7 +140,6 @@ input:checked {
     justify-content: space-evenly;
     align-items: flex-start;
     max-width: 100%;
-    padding: 2rem;
     text-align: left;
 
     section {
