--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,8 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 3.2em;
+  font-size: 2.2em;
+  margin: auto;
   text-decoration: underline;
   text-decoration-style: wavy;
   text-decoration-skip-ink: none;
@@ -32,28 +33,27 @@ h1 {
 
 h2 {
   text-align: center;
-  font-size: 2.2rem;
+  font-size: 1.8rem;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   text-decoration-thickness: 35%;
   text-decoration-color: rgb(255, 228, 196);
-  width: 95%;
 }
 
 #app {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-evenly;
   gap: 2rem;
-  width: 90%;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  margin: 0;
 }
 
 button {
   border-radius: 8px;
   border: 2px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.5em 1em;
   font-size: 1em;
   font-weight: 500;
   margin-bottom: 1.5rem;
@@ -66,9 +66,21 @@ button {
 button:hover {
   border-color: rgb(174, 140, 100);
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.btn--delete {
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  font-size: 0.75rem;
+  transition: background-color 0.25s;
+}
+.btn--delete:hover {
+  border-color: darkred;
+  background-color: rgba(184, 66, 66, 0.801);
 }
 
 section {
@@ -76,7 +88,7 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0;
+  margin: 1rem;
   padding: 0;
   text-align: left;
 
@@ -89,6 +101,16 @@ section {
 
     li {
       margin-top: 1.5rem;
+      font-weight: bold;
+      letter-spacing: 0.1rem;
+      text-transform: uppercase;
+
+      .task-description,
+      .task-deadline {
+        font-weight: 400;
+        letter-spacing: normal;
+        text-transform: none;
+      }
     }
   }
 
@@ -96,8 +118,9 @@ section {
     margin-top: 1.5rem;
     font-size: 1.2em;
   }
+
   .text-input {
-    width: 20%;
+    width: 40%;
     height: fit-content;
     font-size: 1rem;
     margin-bottom: 1rem;
@@ -112,20 +135,6 @@ input:checked {
   accent-color: rgb(174, 140, 100);
 }
 
-.task-name,
-.finished-tasks {
-  font-weight: bold;
-  letter-spacing: 0.1rem;
-  text-transform: uppercase;
-}
-
-.task-description,
-.task-deadline {
-  font-weight: 400;
-  letter-spacing: normal;
-  text-transform: none;
-}
-
 .finished-tasks {
   color: darkgray;
 }
@@ -134,20 +143,24 @@ input:checked {
   body {
     background-image: url(the_scream.png);
     background-repeat: no-repeat;
-    background-position: center 55%;
+    background-position: center 15%;
+
+    h1 {
+      font-size: 3.2em;
+    }
+
+    h2 {
+      font-size: 2.2rem;
+    }
   }
 
   #app {
     flex-direction: row;
-    justify-content: space-evenly;
     align-items: flex-start;
-    max-width: 100%;
+    width: 100%;
     text-align: left;
 
     section {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
       width: 35%;
       background-color: rgba(255, 255, 255, 0.6);
 
@@ -155,5 +168,8 @@ input:checked {
         margin-bottom: 2rem;
       }
     }
+  }
+  .text-input {
+    max-width: 25%;
   }
 }
